--- a/config.sample.json
+++ b/config.sample.json
@@ -2,13 +2,7 @@
     "benchmark_setup": {
         "output_dir": "files",
         "algorithm_ids": [
-            "blip",
-            "gobnilp",
-            "mmhc",
-            "fges",
-            "tabu",
-            "hc",
-            "order_mcmc_itmap"
+            "fci", "itsearch_map", "hc", "tabu"
         ],
         "data": [
             {
@@ -46,6 +40,10 @@
                 },
                 {
                     "structure_learning_algorithm": "mmhc",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "structure_learning_algorithm": "fci",
                     "curve_variable": "alpha"
                 }
             ]
@@ -214,7 +212,7 @@
                         0.45
                     ],
                     "test": "chi-square-test",
-                    "data-type": "discrete"
+                    "datatype": "discrete"
                 }
             ],
             "gfci": [
@@ -231,7 +229,7 @@
                     ],
                     "score": "bdeu-score",
                     "test": "chi-square-test",
-                    "data-type": "discrete"
+                    "datatype": "discrete"
                 }
             ],
             "rfci": [
@@ -247,7 +245,7 @@
                         0.45
                     ],
                     "test": "chi-square-test",
-                    "data-type": "discrete"
+                    "datatype": "discrete"
                 }
             ],
             "pcalg": [
@@ -335,7 +333,7 @@
                     "plot_legend": "Tabu",
                     "score": "bde",
                     "iss": 1,
-                    "iss.mu": 1,
+                    "issmu": 1,
                     "l": 5,
                     "k": 1,
                     "prior": "uniform",
@@ -348,7 +346,7 @@
                     "plot_legend": "Hill-Climbing",
                     "score": "bde",
                     "iss": 1,
-                    "iss.mu": 1,
+                    "issmu": 1,
                     "l": 5,
                     "k": 1,
                     "prior": "uniform",
