--- a/config.sample.json
+++ b/config.sample.json
@@ -6,13 +6,19 @@
                 "graph_id": "generateDAGMaxParents",
                 "parameters_id": "generateBinaryBN",
                 "data_id": "independent_samples",
-                "seed_range": [1, 1]
+                "seed_range": [1, 2]
             }
         ],
         "evaluation": {
             "ROC": [
-                {"algorithm_id": "winasobs", "curve_variable": "time"},
-                {"algorithm_id": "asobs", "curve_variable": "time"},
+                {
+                    "algorithm_id": "winasobs", 
+                    "curve_variable": "time"
+                },
+                {
+                    "algorithm_id": "asobs", 
+                    "curve_variable": "time"
+                },
                 {
                     "algorithm_id": "gobnilp",
                     "curve_variable": "palim"
@@ -24,6 +30,50 @@
                 {
                     "algorithm_id": "mmhc",
                     "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "hc",
+                    "curve_variable": "iss"
+                },
+                {
+                    "algorithm_id": "gs",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "interiamb",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "fci",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "rfci",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "gfci",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "pcalg",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "fges",
+                    "curve_variable": "faithfulnessAssumed"
+                },
+                {
+                    "algorithm_id": "itsearch_map",
+                    "curve_variable": "chi"
+                },
+                {
+                    "algorithm_id": "itsearch_sample",
+                    "curve_variable": "chi"
+                },
+                {
+                    "algorithm_id": "order_mcmc_itsample",
+                    "curve_variable": "threshold"
                 }
             ]
         }
@@ -175,7 +225,7 @@
                     "id": "fges",
                     "faithfulnessAssumed": true,
                     "score": "bdeu-score",
-                    "data-type": "discrete"
+                    "datatype": "discrete"
                 }
             ],
             "fci": [
