--- a/sample_configs/config.sample.binary.json
+++ b/sample_configs/config.sample.binary.json
@@ -3,25 +3,80 @@
         "output_dir": "files",
         "data": [
             {
-                "graph_id": "notears",
-                "parameters_id": "notears",
+                "graph_id": "generateDAGMaxParents",
+                "parameters_id": "generateBinaryBN",
                 "data_id": "independent_samples",
                 "seed_range": [1, 10]
             }
         ],
         "evaluation": {
             "ROC": [
+                
                 {
-                    "algorithm_id": "notears", 
-                    "curve_variable": "penalty_growth_rate"
+                    "algorithm_id": "winasobs", 
+                    "curve_variable": "time"
                 },
                 {
-                    "algorithm_id": "itsearch_map_cont", 
+                    "algorithm_id": "asobs", 
+                    "curve_variable": "time"
+                },
+                {
+                    "algorithm_id": "gobnilp",
+                    "curve_variable": "palim"
+                },
+                {
+                    "algorithm_id": "tabu",
+                    "curve_variable": "beta"
+                },
+                {
+                    "algorithm_id": "mmhc",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "hc",
+                    "curve_variable": "iss"
+                },
+                {
+                    "algorithm_id": "gs",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "interiamb",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "fci",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "rfci",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "gfci",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "pcalg",
+                    "curve_variable": "alpha"
+                },
+                {
+                    "algorithm_id": "fges",
+                    "curve_variable": "faithfulnessAssumed"
+                },
+                {
+                    "algorithm_id": "itsearch_map",
                     "curve_variable": "chi"
-                },                                {
-                    "algorithm_id": "order_mcmc_itmap_cont", 
+                },
+                {
+                    "algorithm_id": "itsearch_sample",
+                    "curve_variable": "chi"
+                },
+                {
+                    "algorithm_id": "order_mcmc_itsample",
                     "curve_variable": "threshold"
                 }
+
             ]
         }
     },
@@ -441,3 +496,4 @@
         }
     }
 }
+
