--- a/config.sample.json
+++ b/config.sample.json
@@ -3,8 +3,8 @@
         "output_dir": "files",
         "data": [
             {
-                "graph_id": "generateDAGMaxParents",
-                "parameters_id": "generateBinaryBN",
+                "graph_id": "notears",
+                "parameters_id": "notears",
                 "data_id": "independent_samples",
                 "seed_range": [1, 2]
             }
@@ -12,67 +12,14 @@
         "evaluation": {
             "ROC": [
                 {
-                    "algorithm_id": "winasobs", 
-                    "curve_variable": "time"
+                    "algorithm_id": "notears", 
+                    "curve_variable": "penalty_growth_rate"
                 },
                 {
-                    "algorithm_id": "asobs", 
-                    "curve_variable": "time"
-                },
-                {
-                    "algorithm_id": "gobnilp",
-                    "curve_variable": "palim"
-                },
-                {
-                    "algorithm_id": "tabu",
-                    "curve_variable": "beta"
-                },
-                {
-                    "algorithm_id": "mmhc",
-                    "curve_variable": "alpha"
-                },
-                {
-                    "algorithm_id": "hc",
-                    "curve_variable": "iss"
-                },
-                {
-                    "algorithm_id": "gs",
-                    "curve_variable": "alpha"
-                },
-                {
-                    "algorithm_id": "interiamb",
-                    "curve_variable": "alpha"
-                },
-                {
-                    "algorithm_id": "fci",
-                    "curve_variable": "alpha"
-                },
-                {
-                    "algorithm_id": "rfci",
-                    "curve_variable": "alpha"
-                },
-                {
-                    "algorithm_id": "gfci",
-                    "curve_variable": "alpha"
-                },
-                {
-                    "algorithm_id": "pcalg",
-                    "curve_variable": "alpha"
-                },
-                {
-                    "algorithm_id": "fges",
-                    "curve_variable": "faithfulnessAssumed"
-                },
-                {
-                    "algorithm_id": "itsearch_map",
+                    "algorithm_id": "itsearch_map_cont", 
                     "curve_variable": "chi"
-                },
-                {
-                    "algorithm_id": "itsearch_sample",
-                    "curve_variable": "chi"
-                },
-                {
-                    "algorithm_id": "order_mcmc_itsample",
+                },                                {
+                    "algorithm_id": "order_mcmc_itmap_cont", 
                     "curve_variable": "threshold"
                 }
             ]
@@ -99,8 +46,8 @@
             "notears": [
                 {
                     "id": "notears",
-                    "num_nodes": 40,
-                    "num_edges": 80
+                    "num_nodes": 80,
+                    "num_edges": 200
                 }
             ],
             "generateDAGMaxParents": [
