Binary hepar2 network

--- a/sample_configs/config.sample.hepar2binary.json
+++ b/sample_configs/config.sample.hepar2binary.json
@@ -49,7 +49,7 @@
                     "curve_variable": "alpha"
                 },
                 {
-                    "algorithm_id": "rfci",
+                    "algorithm_id": "pcalg",
                     "curve_variable": "alpha"
                 },
                 {
