--- a/config/sample_configs/config.sample.binary.json
+++ b/config/sample_configs/config.sample.binary.json
@@ -10,27 +10,26 @@
             }
         ],
         "evaluation": {
-            "ROC": [
-                
-                {
+            "ROC": [               
+               {
                     "algorithm_id": "winasobs", 
-                    "curve_variable": "time"
+                    "curve_variable": "alpha"
                 },
                 {
                     "algorithm_id": "asobs", 
-                    "curve_variable": "time"
+                    "curve_variable": "alpha"
                 },
                 {
                     "algorithm_id": "gobnilp",
-                    "curve_variable": "palim"
+                    "curve_variable": "alpha"
                 },
                 {
                     "algorithm_id": "tabu",
-                    "curve_variable": "beta"
+                    "curve_variable": "iss"
                 },
                 {
                     "algorithm_id": "mmhc",
-                    "curve_variable": "alpha"
+                    "curve_variable": "iss"
                 },
                 {
                     "algorithm_id": "hc",
@@ -50,11 +49,11 @@
                 },
                 {
                     "algorithm_id": "rfci",
-                    "curve_variable": "alpha"
+                    "curve_variable": "samplePrior"
                 },
                 {
                     "algorithm_id": "gfci",
-                    "curve_variable": "alpha"
+                    "curve_variable": "samplePrior"
                 },
                 {
                     "algorithm_id": "pcalg",
@@ -62,7 +61,7 @@
                 },
                 {
                     "algorithm_id": "fges",
-                    "curve_variable": "faithfulnessAssumed"
+                    "curve_variable": "samplePrior"
                 },
                 {
                     "algorithm_id": "itsearch_map",
@@ -73,10 +72,21 @@
                     "curve_variable": "chi"
                 },
                 {
-                    "algorithm_id": "order_mcmc_itsample",
+                    "algorithm_id": "order_mcmc_itsample_chi1",
+                    "curve_variable": "threshold"
+                },
+                {
+                    "algorithm_id": "order_mcmc_itsample_chi10",
+                    "curve_variable": "threshold"
+                },
+                {
+                    "algorithm_id": "order_mcmc_itsample_chi50",
+                    "curve_variable": "threshold"
+                },
+                {
+                    "algorithm_id": "order_mcmc_itsample_chi100",
                     "curve_variable": "threshold"
                 }
-
             ]
         }
     },
@@ -144,7 +154,7 @@
                     "radii": 80,
                     "N": 50,
                     "M": 10,
-                    "pseudo_obs": 1.0,
+                    "pseudo_obs": 10.0,
                     "threshold": [
                         0.7,
                         0.6
@@ -170,12 +180,11 @@
                     "solvermethod": "winasobs",
                     "indeg": 80,
                     "time": [
-                        20,
                         60
                     ],
                     "allocated": 80,
                     "scorefunction": "bdeu",
-                    "alpha": 1,
+                    "alpha": [1, 10, 50, 100],
                     "cores": 1,
                     "verbose": 0
                 },
@@ -185,12 +194,11 @@
                     "solvermethod": "asobs",
                     "indeg": 80,
                     "time": [
-                        20,
                         60
                     ],
                     "allocated": 80,
                     "scorefunction": "bdeu",
-                    "alpha": 1,
+                    "alpha": [1, 10, 50, 100],
                     "cores": 1,
                     "verbose": 0
                 }
@@ -210,7 +218,7 @@
                     "id": "gobnilp",
                     "plot": false,
                     "palim": 2,
-                    "alpha": 1,
+                    "alpha": [1, 10, 50, 100],
                     "prune": true
                 }
             ],
@@ -227,7 +235,9 @@
                     "id": "fges",
                     "faithfulnessAssumed": true,
                     "score": "bdeu-score",
-                    "datatype": "discrete"
+                    "datatype": "discrete",
+                    "samplePrior": [1, 10, 50, 100],
+                    "structurePrior": 1
                 }
             ],
             "fci": [
@@ -258,7 +268,9 @@
                     ],
                     "score": "bdeu-score",
                     "test": "chi-square-test",
-                    "datatype": "discrete"
+                    "datatype": "discrete",
+                    "samplePrior": [1, 10, 50, 100],
+                    "structurePrior": 1
                 }
             ],
             "rfci": [
@@ -273,7 +285,9 @@
                         0.45
                     ],
                     "test": "chi-square-test",
-                    "datatype": "discrete"
+                    "datatype": "discrete",
+                    "samplePrior": [1, 10, 50, 100],
+                    "structurePrior": 1
                 }
             ],
             "pcalg": [
@@ -296,31 +310,14 @@
             "mmhc": [
                 {
                     "id": "mmhc",
-                    "restrict.args": {
-                        "alpha": [
-                            0.01,
-                            0.05,
-                            0.1,
-                            0.2,
-                            0.35,
-                            0.45
-                        ]
-                    }
-                }
-            ],
-            "h2pc": [
-                {
-                    "id": "h2pc",
-                    "restrict.args": {
-                        "alpha": [
-                            0.01,
-                            0.05,
-                            0.1,
-                            0.2,
-                            0.35,
-                            0.45
-                        ]
-                    }
+                    "alpha": [
+                        0.01,
+                        0.05,
+                        0.1,
+                        0.2,
+                        0.35,
+                        0.45
+                    ]
                 }
             ],
             "interiamb": [
@@ -353,7 +350,7 @@
                 {
                     "id": "tabu",
                     "score": "bde",
-                    "iss": 1,
+                    "iss": [1, 10, 50, 100],
                     "issmu": 1,
                     "l": 5,
                     "k": 1,
@@ -365,7 +362,7 @@
                 {
                     "id": "hc",
                     "score": "bde",
-                    "iss": 1,
+                    "iss": [1, 10, 50, 100],
                     "issmu": 1,
                     "l": 5,
                     "k": 1,
@@ -377,21 +374,19 @@
             ],
             "itsearch": [
                 {
-                    "id": "itsearch_map",
-                    "optional": {
-                        "MAP": true,
-                        "plus1it": null,
-                        "posterior": null,
-                        "scoretype": "bdecat",
-                        "chi": 0.5,
-                        "edgepf": 2,
-                        "am": null,
-                        "aw": null
-                    }
+                    "id": "itsearch_map",                    
+                    "MAP": true,
+                    "plus1it": null,
+                    "posterior": null,
+                    "scoretype": "bdecat",
+                    "chi": [1, 10, 50, 100],
+                    "edgepf": 2,
+                    "am": null,
+                    "aw": null
                 },
                 {
                     "id": "itsearch_map_cont",
-                    "optional": {
+                    
                         "MAP": true,
                         "plus1it": null,
                         "posterior": null,
@@ -400,32 +395,82 @@
                         "edgepf": null,
                         "am": 1,
                         "aw": null
-                    }
+                    
                 },
                 {
                     "id": "itsearch_sample",
-                    "optional": {
+                   
+                        "MAP": false,
+                        "plus1it": 6,
+                        "posterior": 0.5,
+                        "scoretype": "bdecat",
+                        "chi": [1, 10, 50, 100],
+                        "edgepf": 2,
+                        "am": null,
+                        "aw": null
+                    
+                },
+                {
+                    "id": "itsearch_sample_chi1",
+                   
                         "MAP": false,
                         "plus1it": 6,
                         "posterior": 0.5,
                         "scoretype": "bdecat",
                         "chi": 1,
-                        "edgepf": 1,
+                        "edgepf": 2,
                         "am": null,
                         "aw": null
-                    }
+                    
+                },
+                {
+                    "id": "itsearch_sample_chi10",
+                   
+                        "MAP": false,
+                        "plus1it": 6,
+                        "posterior": 0.5,
+                        "scoretype": "bdecat",
+                        "chi": 10,
+                        "edgepf": 2,
+                        "am": null,
+                        "aw": null
+                    
+                },
+                {
+                    "id": "itsearch_sample_chi50",
+                   
+                        "MAP": false,
+                        "plus1it": 6,
+                        "posterior": 0.5,
+                        "scoretype": "bdecat",
+                        "chi": 50,
+                        "edgepf": 2,
+                        "am": null,
+                        "aw": null
+                    
+                },
+                {
+                    "id": "itsearch_sample_chi100",
+                   
+                        "MAP": false,
+                        "plus1it": 6,
+                        "posterior": 0.5,
+                        "scoretype": "bdecat",
+                        "chi": 100,
+                        "edgepf": 2,
+                        "am": null,
+                        "aw": null
+                    
                 }
             ],
             "order_mcmc": [
                 {
                     "id": "order_mcmc_itmap",
-                    "startspace": "itsearch_map",
-                    "optional": {
-                        "plus1": true
-                    },
+                    "startspace_algorithm": "itsearch_map",
+                    "plus1": true,
                     "scoretype": "bdecat",
-                    "chi": 1,
-                    "edgepf": 1,
+                    "chi": [1, 10, 50, 100],
+                    "edgepf": 2,
                     "aw": null,
                     "am": null,
                     "threshold": [
@@ -444,10 +489,8 @@
                 },
                 {
                     "id": "order_mcmc_itmap_cont",
-                    "startspace": "itsearch_map_cont",
-                    "optional": {
-                        "plus1": true
-                    },
+                    "startspace_algorithm": "itsearch_map_cont",
+                    "plus1": true,
                     "scoretype": "bge",
                     "chi": null,
                     "edgepf": null,
@@ -469,17 +512,107 @@
                 },
                 {
                     "id": "order_mcmc_itsample",
-                    "startspace": "itsearch_sample",
-                    "optional": {
-                        "plus1": true
-                    },
+                    "startspace_algorithm": "itsearch_sample",
+                    "plus1": true,
                     "scoretype": "bdecat",
-                    "chi": 1,
-                    "edgepf": 1,
+                    "chi": [1, 10, 50, 100],
+                    "edgepf": 2,
                     "aw": null,
                     "am": null,
                     "threshold": [
-                        0.99,
+                         0.99,
+                        0.95,
+                        0.9,
+                        0.8,
+                        0.7,
+                        0.6,
+                        0.5,
+                        0.4,
+                        0.3,
+                        0.2
+                    ],
+                    "burnin": 0
+                },
+                {
+                    "id": "order_mcmc_itsample_chi1",
+                    "startspace_algorithm": "itsearch_sample_chi1",
+                    "plus1": true,
+                    "scoretype": "bdecat",
+                    "chi": 1,
+                    "edgepf": 2,
+                    "aw": null,
+                    "am": null,
+                    "threshold": [
+                         0.99,
+                        0.95,
+                        0.9,
+                        0.8,
+                        0.7,
+                        0.6,
+                        0.5,
+                        0.4,
+                        0.3,
+                        0.2
+                    ],
+                    "burnin": 0
+                },
+                {
+                    "id": "order_mcmc_itsample_chi10",
+                    "startspace_algorithm": "itsearch_sample_chi10",
+                    "plus1": true,
+                    "scoretype": "bdecat",
+                    "chi": 10,
+                    "edgepf": 2,
+                    "aw": null,
+                    "am": null,
+                    "threshold": [
+                         0.99,
+                        0.95,
+                        0.9,
+                        0.8,
+                        0.7,
+                        0.6,
+                        0.5,
+                        0.4,
+                        0.3,
+                        0.2
+                    ],
+                    "burnin": 0
+                },
+                {
+                    "id": "order_mcmc_itsample_chi50",
+                    "startspace_algorithm": "itsearch_sample_chi50",
+                    "plus1": true,
+                    "scoretype": "bdecat",
+                    "chi": 50,
+                    "edgepf": 2,
+                    "aw": null,
+                    "am": null,
+                    "threshold": [
+                         0.99,
+                        0.95,
+                        0.9,
+                        0.8,
+                        0.7,
+                        0.6,
+                        0.5,
+                        0.4,
+                        0.3,
+                        0.2
+                    ],
+                    "burnin": 0
+                },
+                {
+                    "id": "order_mcmc_itsample_chi100",
+                    "startspace_algorithm": "itsearch_sample_chi100",
+                    "plus1": true,
+                    "scoretype": "bdecat",
+                    "chi": 100,
+                    "edgepf": 2,
+                    "aw": null,
+                    "am": null,
+                    "threshold": [
+                         0.99,
                         0.95,
                         0.9,
                         0.8,
@@ -492,6 +625,7 @@
                     ],
                     "burnin": 0
                 }
+
             ]
         }
     }
