--- a/config/sample_configs/config.sample.binary.json
+++ b/config/sample_configs/config.sample.binary.json
@@ -49,11 +49,11 @@
                 },
                 {
                     "algorithm_id": "rfci",
-                    "curve_variable": "samplePrior"
+                    "curve_variable": "alpha"
                 },
                 {
                     "algorithm_id": "gfci",
-                    "curve_variable": "samplePrior"
+                    "curve_variable": "alpha"
                 },
                 {
                     "algorithm_id": "pcalg",
@@ -269,7 +269,6 @@
                     "score": "bdeu-score",
                     "test": "chi-square-test",
                     "datatype": "discrete",
-                    "samplePrior": [1, 10, 50, 100],
                     "structurePrior": 1
                 }
             ],
@@ -285,9 +284,7 @@
                         0.45
                     ],
                     "test": "chi-square-test",
-                    "datatype": "discrete",
-                    "samplePrior": [1, 10, 50, 100],
-                    "structurePrior": 1
+                    "datatype": "discrete"
                 }
             ],
             "pcalg": [
