Changed mmhc curve variable to alpha..

--- a/config/sample_configs/config.sample.binary.json
+++ b/config/sample_configs/config.sample.binary.json
@@ -28,7 +28,7 @@
                 },
                 {
                     "algorithm_id": "mmhc",
-                    "curve_variable": "iss"
+                    "curve_variable": "alpha"
                 },
                 {
                     "algorithm_id": "hc",
