--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -180,7 +180,7 @@ def gen_adjmat_string_from_conf(adjmat_id, seed):
         filename_no_ext = os.path.splitext(os.path.basename(adjmat_id))[0]
         return  "myadjmats/" + filename_no_ext # this could be hepar2.csv e.g.
 
-    elif adjmat_id == "notears":
+    elif adjmat_id in [c["id"] for c in config["resources"]["graph"]["notears"]]: 
         adjmat_dict = next(item for item in config["resources"]["graph"]["notears"] if item["id"] == adjmat_id)
         return expand("notears/" \
                         "num_nodes={num_nodes}/" \
@@ -210,7 +210,7 @@ def gen_parameter_string_from_conf(gen_method_id, seed):
     elif Path("files/bn/bn.fit_networks/"+gen_method_id).is_file():
         return  "bn.fit_networks/" + gen_method_id # this could be hepar2.rds e.g.
 
-    elif gen_method_id == "notears":
+    elif gen_method_id in [c["id"] for c in config["resources"]["parameters"]["notears_parameters_sampling"]]:
         curconf = next(item for item in config["resources"]["parameters"]["notears_parameters_sampling"] if item["id"] == gen_method_id)
         return expand("notears/" \
                       "edge_coefficient_range_from={edge_coefficient_range_from}/"\
