--- a/config/sample_configs/config.sample.gauss.json
+++ b/config/sample_configs/config.sample.gauss.json
@@ -345,7 +345,8 @@
             ],
             "itsearch": [
                 {
-                    "id": "itsearch_map",                    
+                    "id": "itsearch_map",    
+                    "estimate": "map",                 
                     "MAP": true,
                     "plus1it": null,
                     "posterior": null,
@@ -363,7 +364,7 @@
                 },
                 {
                     "id": "itsearch_map_cont",
-                    
+                    "estimate": "map", 
                         "MAP": true,
                         "plus1it": null,
                         "posterior": null,
@@ -382,7 +383,7 @@
                 },
                 {
                     "id": "itsearch_sample",
-                   
+                   "estimate": "map", 
                         "MAP": false,
                         "plus1it": 6,
                         "posterior": 0.5,
@@ -402,7 +403,7 @@
                 },
                 {
                     "id": "itsearch_sample_chi1",
-                   
+                   "estimate": "endspace", 
                         "MAP": false,
                         "plus1it": 6,
                         "posterior": 0.5,
@@ -422,7 +423,7 @@
                 },
                 {
                     "id": "itsearch_sample_chi10",
-                   
+                   "estimate": "endspace", 
                         "MAP": false,
                         "plus1it": 6,
                         "posterior": 0.5,
@@ -442,7 +443,7 @@
                 },
                 {
                     "id": "itsearch_sample_chi50",
-                   
+                   "estimate": "endspace", 
                         "MAP": false,
                         "plus1it": 6,
                         "posterior": 0.5,
@@ -462,7 +463,7 @@
                 },
                 {
                     "id": "itsearch_sample_chi100",
-                   
+                   "estimate": "endspace", 
                         "MAP": false,
                         "plus1it": 6,
                         "posterior": 0.5,
